# caddyy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  dev.sh  docker-compose.yml  pyproject.toml  start.sh  test_add_show.py  test_episode_import.py
backend/: __init__.py  alembic.ini  debug_server.py  fix_existing_shows.py  main.py  test_endpoint.py
backend/alembic/: env.py
backend/alembic/versions/: 2b4c1f8a7d2e_add_collection_tables.py  3a2a2d7c35e6_add_file_tracking_fields.py  4b5c2f9a8e3f_add_tmdb_episode_counts.py  5018bf9dae6c_add_config_settings_table.py  6d2c78546363_add_monitoring_option_field.py
backend/api/: __init__.py  collection.py  config_paths.py  import_media.py  libraries.py  media_paths.py  movies.py  search.py  settings.py  tv.py
backend/core/: config.py  database.py  yaml_config.py
backend/models/: __init__.py  collection.py  media_path.py
backend/routers/config/: movies.py  tv.py
backend/schemas/: __init__.py  media_path.py
backend/services/: collection.py  collection_service.py  file_organizer.py  media_matcher.py  media_scanner.py  naming_service.py  tmdb_service.py
backend/utils/: disk_utils.py
caddyy/: main.py
caddyy/api/: __init__.py  filesystem.py  health.py  movies.py  search.py  settings.py  tv.py
caddyy/core/: config.py  database.py  yaml_config.py
caddyy/services/: tmdb_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddToCollectionModal.tsx  Layout.tsx  (+11 more)
(+20 files in other folders)
